--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mantine/spotlight": "^7.13.3",
     "@mantine/tiptap": "^7.13.3",
     "@nextui-org/react": "^2.4.8",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
